// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CatalogEntryView rendering tests field.options empty - test 1`] = `
<div>
  <div
    class="mx-auto max-w-3xl space-y-8"
    data-testid="catalog-entry-view"
  >
    <div
      class="space-y-4"
      data-testid="header"
    >
      <div
        class="flex flex-wrap gap-2"
      >
        <span
          class="justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 flex items-center gap-1"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-tag h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
            />
            <circle
              cx="7.5"
              cy="7.5"
              fill="currentColor"
              r=".5"
            />
          </svg>
          Category 1
        </span>
        <span
          class="justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground flex items-center gap-1"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-cpu h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 20v2"
            />
            <path
              d="M12 2v2"
            />
            <path
              d="M17 20v2"
            />
            <path
              d="M17 2v2"
            />
            <path
              d="M2 12h2"
            />
            <path
              d="M2 17h2"
            />
            <path
              d="M2 7h2"
            />
            <path
              d="M20 12h2"
            />
            <path
              d="M20 17h2"
            />
            <path
              d="M20 7h2"
            />
            <path
              d="M7 20v2"
            />
            <path
              d="M7 2v2"
            />
            <rect
              height="16"
              rx="2"
              width="16"
              x="4"
              y="4"
            />
            <rect
              height="8"
              rx="1"
              width="8"
              x="8"
              y="8"
            />
          </svg>
          GPT-4o
        </span>
        <span
          class="justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-accent [a&]:hover:text-accent-foreground flex items-center gap-1 text-slate-500"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          5
          × übernommen
        </span>
      </div>
      <div>
        <h1
          class="text-2xl font-bold text-slate-900 sm:text-3xl"
        >
          Catalog Entry 1
        </h1>
        <p
          class="mt-2 text-base text-slate-600"
        >
          Description for catalog entry 1
        </p>
      </div>
      <div
        class="flex flex-wrap gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="use-entry-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-wand-sparkles mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
            />
            <path
              d="m14 7 3 3"
            />
            <path
              d="M5 6v4"
            />
            <path
              d="M19 14v4"
            />
            <path
              d="M10 2v2"
            />
            <path
              d="M7 8H3"
            />
            <path
              d="M21 16h-4"
            />
            <path
              d="M11 3H9"
            />
          </svg>
          Prompt anwenden
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="add-entry-to-library-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          In Bibliothek übernehmen
        </button>
        <div
          data-slot="dialog"
          data-testid="mock-react-dialog-root"
        >
          <div
            data-slot="dialog-portal"
            data-testid="mock-react-dialog-portal"
          >
            <div
              class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
              data-slot="dialog-overlay"
              data-testid="mock-react-dialog-overlay"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-4"
      data-testid="fields"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layout-list h-5 w-5 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="7"
            rx="1"
            width="7"
            x="3"
            y="3"
          />
          <rect
            height="7"
            rx="1"
            width="7"
            x="3"
            y="14"
          />
          <path
            d="M14 4h7"
          />
          <path
            d="M14 9h7"
          />
          <path
            d="M14 15h7"
          />
          <path
            d="M14 20h7"
          />
        </svg>
        <h2
          class="text-lg font-semibold text-slate-900"
        >
          Formularfelder (
          3
          )
        </h2>
      </div>
      <p
        class="text-sm text-slate-500"
      >
        Diese Vorlage hat strukturierte Felder, die du nach dem Übernehmen befüllen kannst.
      </p>
      <div
        class="space-y-3"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm border-slate-200"
          data-slot="card"
          data-testid="field"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-2"
            data-slot="card-header"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="text-sm font-semibold text-slate-800"
                data-slot="card-title"
              >
                Field Label 1
                <span
                  class="ml-1 text-red-500"
                >
                  *
                </span>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground shrink-0 text-xs font-normal"
                data-slot="badge"
              >
                Text
              </span>
            </div>
            <div
              class="text-muted-foreground text-xs"
              data-slot="card-description"
            >
              Field description 1
            </div>
          </div>
        </div>
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm border-slate-200"
          data-slot="card"
          data-testid="field"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-2"
            data-slot="card-header"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="text-sm font-semibold text-slate-800"
                data-slot="card-title"
              >
                Field Label 2
                <span
                  class="ml-1 text-red-500"
                >
                  *
                </span>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground shrink-0 text-xs font-normal"
                data-slot="badge"
              >
                Text
              </span>
            </div>
            <div
              class="text-muted-foreground text-xs"
              data-slot="card-description"
            >
              Field description 2
            </div>
          </div>
          <div
            class="px-6 pt-0"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap gap-1.5"
            >
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-1
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-2
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-3
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm border-slate-200"
          data-slot="card"
          data-testid="field"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-2"
            data-slot="card-header"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="text-sm font-semibold text-slate-800"
                data-slot="card-title"
              >
                Field Label 3
                <span
                  class="ml-1 text-red-500"
                >
                  *
                </span>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground shrink-0 text-xs font-normal"
                data-slot="badge"
              >
                Text
              </span>
            </div>
            <div
              class="text-muted-foreground text-xs"
              data-slot="card-description"
            >
              Field description 3
            </div>
          </div>
          <div
            class="px-6 pt-0"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap gap-1.5"
            >
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-1
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-2
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-3
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-4"
      data-testid="related-entries"
    >
      <h2
        class="text-lg font-semibold text-slate-900"
      >
        Mehr aus dieser Kategorie
      </h2>
      <div
        class="grid grid-cols-1 gap-3 sm:grid-cols-2"
      >
        <a
          class="group rounded-lg border border-slate-200 p-4 transition-colors hover:border-slate-300 hover:bg-slate-50"
          data-testid="related-entry"
          href="/explore/entry-slug-1"
        >
          <h3
            class="font-medium text-slate-900 group-hover:text-slate-700"
          >
            Catalog Entry 1
          </h3>
          <p
            class="mt-1 line-clamp-2 text-sm text-slate-500"
          >
            Description for catalog entry 1
          </p>
        </a>
        <a
          class="group rounded-lg border border-slate-200 p-4 transition-colors hover:border-slate-300 hover:bg-slate-50"
          data-testid="related-entry"
          href="/explore/entry-slug-2"
        >
          <h3
            class="font-medium text-slate-900 group-hover:text-slate-700"
          >
            Catalog Entry 2
          </h3>
          <p
            class="mt-1 line-clamp-2 text-sm text-slate-500"
          >
            Description for catalog entry 2
          </p>
        </a>
        <a
          class="group rounded-lg border border-slate-200 p-4 transition-colors hover:border-slate-300 hover:bg-slate-50"
          data-testid="related-entry"
          href="/explore/entry-slug-3"
        >
          <h3
            class="font-medium text-slate-900 group-hover:text-slate-700"
          >
            Catalog Entry 3
          </h3>
          <p
            class="mt-1 line-clamp-2 text-sm text-slate-500"
          >
            Description for catalog entry 3
          </p>
        </a>
      </div>
    </div>
    <div
      class="rounded-xl border border-slate-200 bg-slate-50 p-6 text-center"
      data-testid="cta"
    >
      <div
        class="flex justify-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info h-5 w-5 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </div>
      <p
        class="mt-2 text-sm font-medium text-slate-700"
      >
        Übernimm diese Vorlage in deine persönliche Library
      </p>
      <p
        class="mt-1 text-xs text-slate-500"
      >
        Die Kopie gehört dir – du kannst sie beliebig anpassen.
      </p>
      <div
        class="mt-4 flex justify-center gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="use-entry-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-wand-sparkles mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
            />
            <path
              d="m14 7 3 3"
            />
            <path
              d="M5 6v4"
            />
            <path
              d="M19 14v4"
            />
            <path
              d="M10 2v2"
            />
            <path
              d="M7 8H3"
            />
            <path
              d="M21 16h-4"
            />
            <path
              d="M11 3H9"
            />
          </svg>
          Prompt anwenden
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="add-entry-to-library-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          In Bibliothek übernehmen
        </button>
        <div
          data-slot="dialog"
          data-testid="mock-react-dialog-root"
        >
          <div
            data-slot="dialog-portal"
            data-testid="mock-react-dialog-portal"
          >
            <div
              class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
              data-slot="dialog-overlay"
              data-testid="mock-react-dialog-overlay"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CatalogEntryView rendering tests fields empty - test 1`] = `
<div>
  <div
    class="mx-auto max-w-3xl space-y-8"
    data-testid="catalog-entry-view"
  >
    <div
      class="space-y-4"
      data-testid="header"
    >
      <div
        class="flex flex-wrap gap-2"
      >
        <span
          class="justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 flex items-center gap-1"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-tag h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
            />
            <circle
              cx="7.5"
              cy="7.5"
              fill="currentColor"
              r=".5"
            />
          </svg>
          Category 1
        </span>
        <span
          class="justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground flex items-center gap-1"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-cpu h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 20v2"
            />
            <path
              d="M12 2v2"
            />
            <path
              d="M17 20v2"
            />
            <path
              d="M17 2v2"
            />
            <path
              d="M2 12h2"
            />
            <path
              d="M2 17h2"
            />
            <path
              d="M2 7h2"
            />
            <path
              d="M20 12h2"
            />
            <path
              d="M20 17h2"
            />
            <path
              d="M20 7h2"
            />
            <path
              d="M7 20v2"
            />
            <path
              d="M7 2v2"
            />
            <rect
              height="16"
              rx="2"
              width="16"
              x="4"
              y="4"
            />
            <rect
              height="8"
              rx="1"
              width="8"
              x="8"
              y="8"
            />
          </svg>
          GPT-4o
        </span>
        <span
          class="justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-accent [a&]:hover:text-accent-foreground flex items-center gap-1 text-slate-500"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          5
          × übernommen
        </span>
      </div>
      <div>
        <h1
          class="text-2xl font-bold text-slate-900 sm:text-3xl"
        >
          Catalog Entry 1
        </h1>
        <p
          class="mt-2 text-base text-slate-600"
        >
          Description for catalog entry 1
        </p>
      </div>
      <div
        class="flex flex-wrap gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="use-entry-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-wand-sparkles mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
            />
            <path
              d="m14 7 3 3"
            />
            <path
              d="M5 6v4"
            />
            <path
              d="M19 14v4"
            />
            <path
              d="M10 2v2"
            />
            <path
              d="M7 8H3"
            />
            <path
              d="M21 16h-4"
            />
            <path
              d="M11 3H9"
            />
          </svg>
          Prompt anwenden
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="add-entry-to-library-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          In Bibliothek übernehmen
        </button>
        <div
          data-slot="dialog"
          data-testid="mock-react-dialog-root"
        >
          <div
            data-slot="dialog-portal"
            data-testid="mock-react-dialog-portal"
          >
            <div
              class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
              data-slot="dialog-overlay"
              data-testid="mock-react-dialog-overlay"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-4"
      data-testid="related-entries"
    >
      <h2
        class="text-lg font-semibold text-slate-900"
      >
        Mehr aus dieser Kategorie
      </h2>
      <div
        class="grid grid-cols-1 gap-3 sm:grid-cols-2"
      >
        <a
          class="group rounded-lg border border-slate-200 p-4 transition-colors hover:border-slate-300 hover:bg-slate-50"
          data-testid="related-entry"
          href="/explore/entry-slug-1"
        >
          <h3
            class="font-medium text-slate-900 group-hover:text-slate-700"
          >
            Catalog Entry 1
          </h3>
          <p
            class="mt-1 line-clamp-2 text-sm text-slate-500"
          >
            Description for catalog entry 1
          </p>
        </a>
        <a
          class="group rounded-lg border border-slate-200 p-4 transition-colors hover:border-slate-300 hover:bg-slate-50"
          data-testid="related-entry"
          href="/explore/entry-slug-2"
        >
          <h3
            class="font-medium text-slate-900 group-hover:text-slate-700"
          >
            Catalog Entry 2
          </h3>
          <p
            class="mt-1 line-clamp-2 text-sm text-slate-500"
          >
            Description for catalog entry 2
          </p>
        </a>
        <a
          class="group rounded-lg border border-slate-200 p-4 transition-colors hover:border-slate-300 hover:bg-slate-50"
          data-testid="related-entry"
          href="/explore/entry-slug-3"
        >
          <h3
            class="font-medium text-slate-900 group-hover:text-slate-700"
          >
            Catalog Entry 3
          </h3>
          <p
            class="mt-1 line-clamp-2 text-sm text-slate-500"
          >
            Description for catalog entry 3
          </p>
        </a>
      </div>
    </div>
    <div
      class="rounded-xl border border-slate-200 bg-slate-50 p-6 text-center"
      data-testid="cta"
    >
      <div
        class="flex justify-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info h-5 w-5 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </div>
      <p
        class="mt-2 text-sm font-medium text-slate-700"
      >
        Übernimm diese Vorlage in deine persönliche Library
      </p>
      <p
        class="mt-1 text-xs text-slate-500"
      >
        Die Kopie gehört dir – du kannst sie beliebig anpassen.
      </p>
      <div
        class="mt-4 flex justify-center gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="use-entry-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-wand-sparkles mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
            />
            <path
              d="m14 7 3 3"
            />
            <path
              d="M5 6v4"
            />
            <path
              d="M19 14v4"
            />
            <path
              d="M10 2v2"
            />
            <path
              d="M7 8H3"
            />
            <path
              d="M21 16h-4"
            />
            <path
              d="M11 3H9"
            />
          </svg>
          Prompt anwenden
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="add-entry-to-library-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          In Bibliothek übernehmen
        </button>
        <div
          data-slot="dialog"
          data-testid="mock-react-dialog-root"
        >
          <div
            data-slot="dialog-portal"
            data-testid="mock-react-dialog-portal"
          >
            <div
              class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
              data-slot="dialog-overlay"
              data-testid="mock-react-dialog-overlay"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CatalogEntryView rendering tests relatedEntries defined - test 1`] = `
<div>
  <div
    class="mx-auto max-w-3xl space-y-8"
    data-testid="catalog-entry-view"
  >
    <div
      class="space-y-4"
      data-testid="header"
    >
      <div
        class="flex flex-wrap gap-2"
      >
        <span
          class="justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 flex items-center gap-1"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-tag h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
            />
            <circle
              cx="7.5"
              cy="7.5"
              fill="currentColor"
              r=".5"
            />
          </svg>
          Category 1
        </span>
        <span
          class="justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground flex items-center gap-1"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-cpu h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 20v2"
            />
            <path
              d="M12 2v2"
            />
            <path
              d="M17 20v2"
            />
            <path
              d="M17 2v2"
            />
            <path
              d="M2 12h2"
            />
            <path
              d="M2 17h2"
            />
            <path
              d="M2 7h2"
            />
            <path
              d="M20 12h2"
            />
            <path
              d="M20 17h2"
            />
            <path
              d="M20 7h2"
            />
            <path
              d="M7 20v2"
            />
            <path
              d="M7 2v2"
            />
            <rect
              height="16"
              rx="2"
              width="16"
              x="4"
              y="4"
            />
            <rect
              height="8"
              rx="1"
              width="8"
              x="8"
              y="8"
            />
          </svg>
          GPT-4o
        </span>
        <span
          class="justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-accent [a&]:hover:text-accent-foreground flex items-center gap-1 text-slate-500"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          5
          × übernommen
        </span>
      </div>
      <div>
        <h1
          class="text-2xl font-bold text-slate-900 sm:text-3xl"
        >
          Catalog Entry 1
        </h1>
        <p
          class="mt-2 text-base text-slate-600"
        >
          Description for catalog entry 1
        </p>
      </div>
      <div
        class="flex flex-wrap gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="use-entry-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-wand-sparkles mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
            />
            <path
              d="m14 7 3 3"
            />
            <path
              d="M5 6v4"
            />
            <path
              d="M19 14v4"
            />
            <path
              d="M10 2v2"
            />
            <path
              d="M7 8H3"
            />
            <path
              d="M21 16h-4"
            />
            <path
              d="M11 3H9"
            />
          </svg>
          Prompt anwenden
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="add-entry-to-library-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          In Bibliothek übernehmen
        </button>
        <div
          data-slot="dialog"
          data-testid="mock-react-dialog-root"
        >
          <div
            data-slot="dialog-portal"
            data-testid="mock-react-dialog-portal"
          >
            <div
              class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
              data-slot="dialog-overlay"
              data-testid="mock-react-dialog-overlay"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-4"
      data-testid="fields"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layout-list h-5 w-5 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="7"
            rx="1"
            width="7"
            x="3"
            y="3"
          />
          <rect
            height="7"
            rx="1"
            width="7"
            x="3"
            y="14"
          />
          <path
            d="M14 4h7"
          />
          <path
            d="M14 9h7"
          />
          <path
            d="M14 15h7"
          />
          <path
            d="M14 20h7"
          />
        </svg>
        <h2
          class="text-lg font-semibold text-slate-900"
        >
          Formularfelder (
          3
          )
        </h2>
      </div>
      <p
        class="text-sm text-slate-500"
      >
        Diese Vorlage hat strukturierte Felder, die du nach dem Übernehmen befüllen kannst.
      </p>
      <div
        class="space-y-3"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm border-slate-200"
          data-slot="card"
          data-testid="field"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-2"
            data-slot="card-header"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="text-sm font-semibold text-slate-800"
                data-slot="card-title"
              >
                Field Label 1
                <span
                  class="ml-1 text-red-500"
                >
                  *
                </span>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground shrink-0 text-xs font-normal"
                data-slot="badge"
              >
                Text
              </span>
            </div>
            <div
              class="text-muted-foreground text-xs"
              data-slot="card-description"
            >
              Field description 1
            </div>
          </div>
          <div
            class="px-6 pt-0"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap gap-1.5"
            >
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-1
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-2
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-3
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm border-slate-200"
          data-slot="card"
          data-testid="field"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-2"
            data-slot="card-header"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="text-sm font-semibold text-slate-800"
                data-slot="card-title"
              >
                Field Label 2
                <span
                  class="ml-1 text-red-500"
                >
                  *
                </span>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground shrink-0 text-xs font-normal"
                data-slot="badge"
              >
                Text
              </span>
            </div>
            <div
              class="text-muted-foreground text-xs"
              data-slot="card-description"
            >
              Field description 2
            </div>
          </div>
          <div
            class="px-6 pt-0"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap gap-1.5"
            >
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-1
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-2
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-3
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm border-slate-200"
          data-slot="card"
          data-testid="field"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-2"
            data-slot="card-header"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="text-sm font-semibold text-slate-800"
                data-slot="card-title"
              >
                Field Label 3
                <span
                  class="ml-1 text-red-500"
                >
                  *
                </span>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground shrink-0 text-xs font-normal"
                data-slot="badge"
              >
                Text
              </span>
            </div>
            <div
              class="text-muted-foreground text-xs"
              data-slot="card-description"
            >
              Field description 3
            </div>
          </div>
          <div
            class="px-6 pt-0"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap gap-1.5"
            >
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-1
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-2
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-3
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-4"
      data-testid="related-entries"
    >
      <h2
        class="text-lg font-semibold text-slate-900"
      >
        Mehr aus dieser Kategorie
      </h2>
      <div
        class="grid grid-cols-1 gap-3 sm:grid-cols-2"
      >
        <a
          class="group rounded-lg border border-slate-200 p-4 transition-colors hover:border-slate-300 hover:bg-slate-50"
          data-testid="related-entry"
          href="/explore/entry-slug-1"
        >
          <h3
            class="font-medium text-slate-900 group-hover:text-slate-700"
          >
            Catalog Entry 1
          </h3>
          <p
            class="mt-1 line-clamp-2 text-sm text-slate-500"
          >
            Description for catalog entry 1
          </p>
        </a>
        <a
          class="group rounded-lg border border-slate-200 p-4 transition-colors hover:border-slate-300 hover:bg-slate-50"
          data-testid="related-entry"
          href="/explore/entry-slug-2"
        >
          <h3
            class="font-medium text-slate-900 group-hover:text-slate-700"
          >
            Catalog Entry 2
          </h3>
          <p
            class="mt-1 line-clamp-2 text-sm text-slate-500"
          >
            Description for catalog entry 2
          </p>
        </a>
        <a
          class="group rounded-lg border border-slate-200 p-4 transition-colors hover:border-slate-300 hover:bg-slate-50"
          data-testid="related-entry"
          href="/explore/entry-slug-3"
        >
          <h3
            class="font-medium text-slate-900 group-hover:text-slate-700"
          >
            Catalog Entry 3
          </h3>
          <p
            class="mt-1 line-clamp-2 text-sm text-slate-500"
          >
            Description for catalog entry 3
          </p>
        </a>
      </div>
    </div>
    <div
      class="rounded-xl border border-slate-200 bg-slate-50 p-6 text-center"
      data-testid="cta"
    >
      <div
        class="flex justify-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info h-5 w-5 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </div>
      <p
        class="mt-2 text-sm font-medium text-slate-700"
      >
        Übernimm diese Vorlage in deine persönliche Library
      </p>
      <p
        class="mt-1 text-xs text-slate-500"
      >
        Die Kopie gehört dir – du kannst sie beliebig anpassen.
      </p>
      <div
        class="mt-4 flex justify-center gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="use-entry-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-wand-sparkles mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
            />
            <path
              d="m14 7 3 3"
            />
            <path
              d="M5 6v4"
            />
            <path
              d="M19 14v4"
            />
            <path
              d="M10 2v2"
            />
            <path
              d="M7 8H3"
            />
            <path
              d="M21 16h-4"
            />
            <path
              d="M11 3H9"
            />
          </svg>
          Prompt anwenden
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="add-entry-to-library-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          In Bibliothek übernehmen
        </button>
        <div
          data-slot="dialog"
          data-testid="mock-react-dialog-root"
        >
          <div
            data-slot="dialog-portal"
            data-testid="mock-react-dialog-portal"
          >
            <div
              class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
              data-slot="dialog-overlay"
              data-testid="mock-react-dialog-overlay"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CatalogEntryView rendering tests relatedEntries empty - test 1`] = `
<div>
  <div
    class="mx-auto max-w-3xl space-y-8"
    data-testid="catalog-entry-view"
  >
    <div
      class="space-y-4"
      data-testid="header"
    >
      <div
        class="flex flex-wrap gap-2"
      >
        <span
          class="justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 flex items-center gap-1"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-tag h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
            />
            <circle
              cx="7.5"
              cy="7.5"
              fill="currentColor"
              r=".5"
            />
          </svg>
          Category 1
        </span>
        <span
          class="justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground flex items-center gap-1"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-cpu h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 20v2"
            />
            <path
              d="M12 2v2"
            />
            <path
              d="M17 20v2"
            />
            <path
              d="M17 2v2"
            />
            <path
              d="M2 12h2"
            />
            <path
              d="M2 17h2"
            />
            <path
              d="M2 7h2"
            />
            <path
              d="M20 12h2"
            />
            <path
              d="M20 17h2"
            />
            <path
              d="M20 7h2"
            />
            <path
              d="M7 20v2"
            />
            <path
              d="M7 2v2"
            />
            <rect
              height="16"
              rx="2"
              width="16"
              x="4"
              y="4"
            />
            <rect
              height="8"
              rx="1"
              width="8"
              x="8"
              y="8"
            />
          </svg>
          GPT-4o
        </span>
        <span
          class="justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-accent [a&]:hover:text-accent-foreground flex items-center gap-1 text-slate-500"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          5
          × übernommen
        </span>
      </div>
      <div>
        <h1
          class="text-2xl font-bold text-slate-900 sm:text-3xl"
        >
          Catalog Entry 1
        </h1>
        <p
          class="mt-2 text-base text-slate-600"
        >
          Description for catalog entry 1
        </p>
      </div>
      <div
        class="flex flex-wrap gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="use-entry-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-wand-sparkles mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
            />
            <path
              d="m14 7 3 3"
            />
            <path
              d="M5 6v4"
            />
            <path
              d="M19 14v4"
            />
            <path
              d="M10 2v2"
            />
            <path
              d="M7 8H3"
            />
            <path
              d="M21 16h-4"
            />
            <path
              d="M11 3H9"
            />
          </svg>
          Prompt anwenden
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="add-entry-to-library-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          In Bibliothek übernehmen
        </button>
        <div
          data-slot="dialog"
          data-testid="mock-react-dialog-root"
        >
          <div
            data-slot="dialog-portal"
            data-testid="mock-react-dialog-portal"
          >
            <div
              class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
              data-slot="dialog-overlay"
              data-testid="mock-react-dialog-overlay"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-4"
      data-testid="fields"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layout-list h-5 w-5 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="7"
            rx="1"
            width="7"
            x="3"
            y="3"
          />
          <rect
            height="7"
            rx="1"
            width="7"
            x="3"
            y="14"
          />
          <path
            d="M14 4h7"
          />
          <path
            d="M14 9h7"
          />
          <path
            d="M14 15h7"
          />
          <path
            d="M14 20h7"
          />
        </svg>
        <h2
          class="text-lg font-semibold text-slate-900"
        >
          Formularfelder (
          3
          )
        </h2>
      </div>
      <p
        class="text-sm text-slate-500"
      >
        Diese Vorlage hat strukturierte Felder, die du nach dem Übernehmen befüllen kannst.
      </p>
      <div
        class="space-y-3"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm border-slate-200"
          data-slot="card"
          data-testid="field"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-2"
            data-slot="card-header"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="text-sm font-semibold text-slate-800"
                data-slot="card-title"
              >
                Field Label 1
                <span
                  class="ml-1 text-red-500"
                >
                  *
                </span>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground shrink-0 text-xs font-normal"
                data-slot="badge"
              >
                Text
              </span>
            </div>
            <div
              class="text-muted-foreground text-xs"
              data-slot="card-description"
            >
              Field description 1
            </div>
          </div>
          <div
            class="px-6 pt-0"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap gap-1.5"
            >
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-1
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-2
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-3
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm border-slate-200"
          data-slot="card"
          data-testid="field"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-2"
            data-slot="card-header"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="text-sm font-semibold text-slate-800"
                data-slot="card-title"
              >
                Field Label 2
                <span
                  class="ml-1 text-red-500"
                >
                  *
                </span>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground shrink-0 text-xs font-normal"
                data-slot="badge"
              >
                Text
              </span>
            </div>
            <div
              class="text-muted-foreground text-xs"
              data-slot="card-description"
            >
              Field description 2
            </div>
          </div>
          <div
            class="px-6 pt-0"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap gap-1.5"
            >
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-1
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-2
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-3
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm border-slate-200"
          data-slot="card"
          data-testid="field"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-2"
            data-slot="card-header"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="text-sm font-semibold text-slate-800"
                data-slot="card-title"
              >
                Field Label 3
                <span
                  class="ml-1 text-red-500"
                >
                  *
                </span>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground shrink-0 text-xs font-normal"
                data-slot="badge"
              >
                Text
              </span>
            </div>
            <div
              class="text-muted-foreground text-xs"
              data-slot="card-description"
            >
              Field description 3
            </div>
          </div>
          <div
            class="px-6 pt-0"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap gap-1.5"
            >
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-1
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-2
              </span>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
                data-slot="badge"
              >
                option-3
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rounded-xl border border-slate-200 bg-slate-50 p-6 text-center"
      data-testid="cta"
    >
      <div
        class="flex justify-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info h-5 w-5 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </div>
      <p
        class="mt-2 text-sm font-medium text-slate-700"
      >
        Übernimm diese Vorlage in deine persönliche Library
      </p>
      <p
        class="mt-1 text-xs text-slate-500"
      >
        Die Kopie gehört dir – du kannst sie beliebig anpassen.
      </p>
      <div
        class="mt-4 flex justify-center gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="use-entry-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-wand-sparkles mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
            />
            <path
              d="m14 7 3 3"
            />
            <path
              d="M5 6v4"
            />
            <path
              d="M19 14v4"
            />
            <path
              d="M10 2v2"
            />
            <path
              d="M7 8H3"
            />
            <path
              d="M21 16h-4"
            />
            <path
              d="M11 3H9"
            />
          </svg>
          Prompt anwenden
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer sm:w-auto"
          data-slot="button"
          data-testid="add-entry-to-library-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          In Bibliothek übernehmen
        </button>
        <div
          data-slot="dialog"
          data-testid="mock-react-dialog-root"
        >
          <div
            data-slot="dialog-portal"
            data-testid="mock-react-dialog-portal"
          >
            <div
              class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
              data-slot="dialog-overlay"
              data-testid="mock-react-dialog-overlay"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
